# lab-lists

./: README.md  lab-lists.cabal
src/: Lab.hs
test/: Spec.hs
