name:                lab-lists
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/fpclass/lab-lists#readme
license:             MIT
license-file:        LICENSE
author:              Michael B. Gale
maintainer:          m.gale@warwick.ac.uk
copyright:           2020 Michael B. Gale
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lab
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite lab-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_lab_lists
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts
  build-depends:
      base >=4.7 && <5
    , directory
    , extra
    , lab-lists
    , tasty
    , tasty-hunit
    , tasty-quickcheck
  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/fpclass/lab-lists
